--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap"
     />
-    <title>MUN Finance</title>
+    <title>MUN Tools - Automatic NFT lending platform on Solana</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
